--- a/style.css
+++ b/style.css
@@ -2,41 +2,125 @@
     width: 100px;
     height: 100px;
     border: 1px solid red;
+    transition: background-color 2s;
 }
+
+.ex-1-square:hover{
+    background-color: red;
+}
+
 .ex-2-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 2s;
 }
+
+.ex-2-square:active{
+    width: 100%;
+}
+
 .ex-3-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 2s;
 }
+
+.ex-3-square:hover{
+    border-radius: 50%;
+}
+
 .ex-4-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: 2s;
+}
+
+.ex-4-square:hover{
+    opacity: 0;
 }
 .ex-5-square {
     margin: 20px;
     width: 60px;
     height: 60px;
     background: red;
+    transition: 2s;
+}
+
+.ex-5-square:hover{
+    transform: scale(2); 
+}
+
+.ex-5-square:active{
+    transform: scale(0.2);
 }
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
 
+.ex-6-img:hover{
+    filter: grayscale(100%);
+}
+
+.ex-7-img{
+    transition: 3s;
+}
+
+.ex-7-img:hover{
+    filter: grayscale(100%);
+    border-radius: 30%;
+}
+
+.ex-8-img{
+    transition: 3s;
+}
+
+.ex-8-img:hover{
+    filter: saturate(30%);
+    filter:sepia(70%);
+    border-radius: 10%;
+}
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    transition: 3s;
 }
-.ex-10-icon {
+
+.ex-9-img:hover{
+    transform: scale(1.5);
+    filter: saturate(30%);
+    filter: sepia(70%);
+    border-radius: 8%;
+}
+
+.ex-10-icon{
     font-size: 60px;
+    animation-name: spinner;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+    animation-timing-function: linear;
+}
+@keyframes spinner {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
 }
 .ex-11-icon {
     font-size: 60px;
+}
+
+.ex-11-icon:hover{
+    animation-name: spinner-reverse;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(.96,.86,.97,.58);
+}
+@keyframes spinner-reverse {
+    0% {transform: rotate(0deg);}
+    90%{transform: rotate(315deg);}
+    100%{transform: rotate(0deg);}
 }
 .ex-12-button, .ex-13-button {
     position: relative;
@@ -51,6 +135,49 @@
     text-align: center;
     text-decoration: none;
 }
+
+@keyframes move-top {
+    0%{
+        left: 10%;
+    }
+    
+    50%{
+        left: 70%;
+    }
+
+    100%{
+        left: 10%;
+    }
+}
+
+@keyframes move-bottom {
+    0%{
+        right: 20%;
+    }
+
+    50%{
+        right: 70%;
+    }
+
+    100%{
+        right: 20%;
+    }
+}
+
+.ex-12-button:hover .ex-12-top-white{
+    animation-name: move-top;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+}
+
+.ex-12-button:hover .ex-12-bottom-white{
+    animation-name: move-bottom;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+}
+
 .ex-12-top-white, .ex-13-top-white {
     position: absolute;
     top: -10px;
@@ -66,4 +193,86 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+
+@keyframes infinite-move-top {
+    0%{
+        left: 10%;
+    }
+
+    10%{
+        left: 100%;
+        
+    }
+
+    20%{
+        left: 100%;
+        top: 20%;
+    }
+
+    30%{
+        left: 100%;
+        top: 70%;
+    }
+
+    40%{
+        left: 100%;
+        top: 85%;
+    }
+
+    50%{
+        left: 70%;
+        top: 85%;
+    }
+
+    60%{
+        left: 20%;
+        top: 85%;
+    }
+
+    70%{
+        left: -10px;
+        top: 85%;
+    }
+
+    80%{
+        left: -10px;
+        top: 85%;
+    }
+
+    90%{
+        left: -10px;
+        top: -10px;
+    }
+
+    100%{
+        left: 20%;
+    }
+}
+
+.{
+    animation-name: infinite-move-top;
+    animation-duration: 7s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-timing-function: linear;
+}
+
+@keyframes infinite-move-bottom {
+    0%{
+        right: 20%;
+        top: 100%;
+    }
+
+    
+
+   
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation-name: infinite-move-bottom;
+    animation-duration: 7s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-timing-function: linear;
 }
