--- a/style.css
+++ b/style.css
@@ -250,9 +250,9 @@
     }
 }
 
-.{
+.ex-13-button:hover .ex-13-top-white{
     animation-name: infinite-move-top;
-    animation-duration: 7s;
+    animation-duration: 4s;
     animation-iteration-count: infinite;
     animation-direction: normal;
     animation-timing-function: linear;
@@ -271,7 +271,7 @@
 
 .ex-13-button:hover .ex-13-bottom-white{
     animation-name: infinite-move-bottom;
-    animation-duration: 7s;
+    animation-duration: 4s;
     animation-iteration-count: infinite;
     animation-direction: normal;
     animation-timing-function: linear;
